--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pyong-kokomi",
-  "homepage": "https://yusa-imit.github.io/pyong-komi/",
+  "homepage": "https:/kokomi.sutora.org",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
